examples: sho fix vuepy package name

--- a/examples/sho/prompts/llms-ctx-vuepy.ipynb
+++ b/examples/sho/prompts/llms-ctx-vuepy.ipynb
@@ -32,7 +32,7 @@
     "## 安装vuepy\n",
     "\n",
     "```\n",
-    "pip install org.vuepy.core\n",
+    "pip install vuepy-core\n",
     "```\n"
    ]
   },
@@ -912,7 +912,7 @@
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "6a82988a50d148cea6a0fc896225eecd": {
+     "2479b1ebc03447809fbd9421a152ed03": {
       "model_module": "anywidget",
       "model_module_version": "~0.9.*",
       "model_name": "AnyModel",
@@ -927,7 +927,7 @@
        "_view_module_version": "~0.9.*",
        "_view_name": "AnyView",
        "close_msg_id": "",
-       "layout": "IPY_MODEL_d47fd1dfa295458da533d946c4ca24c6",
+       "layout": "IPY_MODEL_839b69a2d04d4cfabee72008e12998c3",
        "message_options": {
         "duration": 3000,
         "message": "",
@@ -936,21 +936,21 @@
        }
       }
      },
-     "750bfa17f21e440b9cf797a3da69105d": {
+     "4e468aa0a7df43e3bce5330d63b1672e": {
       "model_module": "@jupyter-widgets/output",
       "model_module_version": "1.0.0",
       "model_name": "OutputModel",
       "state": {
-       "layout": "IPY_MODEL_e1ed5557e8a446ce9d7ed8c29b17faf0"
+       "layout": "IPY_MODEL_bd7dcb5589434aefb021c514096d4b2d"
       }
      },
-     "d47fd1dfa295458da533d946c4ca24c6": {
+     "839b69a2d04d4cfabee72008e12998c3": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
       "state": {}
      },
-     "e1ed5557e8a446ce9d7ed8c29b17faf0": {
+     "bd7dcb5589434aefb021c514096d4b2d": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
