--- a/examples/vleaflet/layers/Velocity.ipynb
+++ b/examples/vleaflet/layers/Velocity.ipynb
@@ -106,27 +106,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "392aa25a-4073-4d2b-93f9-d89666b38369",
-   "metadata": {},
-   "source": [
-    "## 禁用状态\n",
-    "\n",
-    "你可以使用 `disabled` 属性来定义是否被禁用。  \n",
-    "使用 `disabled` 属性来控制是否为禁用状态。该属性接受一个 `bool` 类型的值。"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4555cd32-d66d-411b-8b39-01153e8fb53d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%vuepy_demo disabled.vue"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8685d144-029f-4afa-8547-4f3d84529504",
    "metadata": {},
    "source": [
@@ -134,34 +113,40 @@
     "\n",
     "### 属性\n",
     "\n",
-    "| 属性名    | 说明                 | 类型                                                           | 默认值 |\n",
-    "| -------- | ------------------- | ---------------------------------------------------------------| ------- |\n",
-    "| v-model/value | 绑定值             | ^[str]                                                      | —       |\n",
-    "| desc     | 按钮文字             | ^[str]                                                         | —       |\n",
-    "| icon     | 按钮图标             | ^[str]                                                         | —       |\n",
-    "| type     | 类型                | ^[enum]`''\\| 'success'\\| 'warning'\\| 'danger'\\| 'info'`        | —       |\n",
-    "| tooltip  | 提示信息             | ^[str]                                                         | —       |\n",
-    "| disabled | 按钮是否为禁用状态     | ^[boolean]                                                     | false   |\n",
-    "| style    | 自定义css样式             | ^[str]                                                         | -       |\n",
+    "| 属性名 | 说明 | 类型 | 默认值 | 必填 | 备注 |\n",
+    "|--------|------|------|--------|------|------|\n",
+    "| data | 速度场数据源 | Object | - | 是 | 必须包含速度场数据 |\n",
+    "| name | 图层名称 | string | '' | 否 | - |\n",
+    "| zonal_speed | 纬向速度变量名 | string | '' | 否 | 数据源中的字段名 |\n",
+    "| meridional_speed | 经向速度变量名 | string | '' | 否 | 数据源中的字段名 |\n",
+    "| latitude_dimension | 纬度维度名 | string | '' | 否 | 数据源中的纬度字段 |\n",
+    "| longitude_dimension | 经度维度名 | string | '' | 否 | 数据源中的经度字段 |\n",
+    "| display_values | 是否显示悬停数值 | boolean | true | 否 | - |\n",
+    "| display_options | 显示配置选项 | Object | `{velocity_type: 'Global Wind',display_position: 'bottomleft',display_empty_string: 'No wind data',angle_convention: 'bearingCW',speed_unit: 'kts'}` | 否 | 支持多种显示配置 |\n",
+    "| min_velocity | 最小速度值 | number | 0 | 否 | 用于颜色标尺 |\n",
+    "| max_velocity | 最大速度值 | number | 10 | 否 | 用于颜色标尺 |\n",
+    "| velocity_scale | 速度缩放系数 | number | 0.005 | 否 | 控制粒子动画 |\n",
+    "| color_scale | 自定义颜色标尺 | Array\\<string\\> | [] | 否 | 十六进制/RGB颜色数组 |\n",
     "\n",
-    "### Events\n",
+    "### 事件\n",
     "\n",
-    "| 事件名 | 说明                  | 类型                                   |\n",
-    "| ---   | ---                  | ---                                    |\n",
-    "| click | 当按钮被点击时触发的事件 |  ^[Callable]`(button: Widget) -> None` |\n",
+    "| 事件名 | 说明 | 参数 |\n",
+    "|--------|------|------|\n",
+    "| - | - | - |\n",
     "\n",
+    "### 插槽\n",
     "\n",
-    "### Slots\n",
-    "\n",
-    "| 插槽名   | 说明               |\n",
-    "| ---     | ---               |\n",
-    "| default | 自定义默认内容      |\n",
-    "\n",
+    "| 插槽名 | 说明 |\n",
+    "|--------|------|\n",
+    "| - | - |\n",
     "\n",
     "### 方法\n",
     "\n",
-    "| 属性名 | 说明 | 类型 |\n",
-    "| --- | --- | --- |"
+    "| 方法名 | 说明 | 参数 | 返回值 |\n",
+    "|--------|------|------|--------|\n",
+    "| - | - | - | - |\n",
+    "\n",
+    "ref: https://ipyleaflet.readthedocs.io/en/latest/layers/velocity.html"
    ]
   },
   {
@@ -193,52 +178,7 @@
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
-    "state": {
-     "14f936451b354662b02ef3e94f0769aa": {
-      "model_module": "anywidget",
-      "model_module_version": "~0.9.*",
-      "model_name": "AnyModel",
-      "state": {
-       "_anywidget_id": "ipywui.widgets.custom.message.MessageWidget",
-       "_css": ".wui-message-root {\n    display: flex;\n    position: absolute;\n    left: 0;\n    right: 0;\n    top: 0;\n}\n\n.wui-message-container {\n    align-items: center;\n    display: flex;\n    flex-direction: column-reverse;\n    justify-content: center;\n    min-height: 100%;\n    outline: none;\n    width: 100%;\n\n    -webkit-tap-highlight-color: rgba(0,0,0,0);\n    bottom: 0;\n    left: 0;\n    right: 0;\n    top: 0;\n}\n\n.wui-message--success {\n    --wui-message-bg-color: #f0f9eb;\n    --wui-message-border-color: #e1f3d8;\n    --wui-message-text-color: #67c23a;\n}\n.wui-message--warning {\n    --wui-message-bg-color: #fdf6ec;\n    --wui-message-border-color: #faecd8;\n    --wui-message-text-color: #e6a23c;\n}\n.wui-message--info {\n    --wui-message-bg-color: #f4f4f5;\n    --wui-message-border-color: #e9e9eb;\n    --wui-message-text-color: #909399;\n}\n.wui-message--error {\n    --wui-message-bg-color: #fef0f0;\n    --wui-message-border-color: #fde2e2;\n    --wui-message-text-color: #f56c6c;\n}\n\n@keyframes msg-open {\n    0% {\n        opacity: 0;\n        -webkit-transform: translateY(-120%);\n        transform: translateY(-120%)\n    }\n    to {\n        -webkit-transform: translateY(0);\n        transform: translateY(0)\n    }\n}\n\n@keyframes msg-close {\n    0% {\n        opacity: 1;\n        -webkit-transform: scale(1);\n        transform: scale(1)\n    }\n    to {\n        opacity: 0;\n        -webkit-transform: scale(.9);\n        transform: scale(.9)\n    }\n}\n.wui-message[data-state=entered],.wui-message[data-state=entering] {\n    -webkit-animation: msg-open .24s cubic-bezier(.175,.885,.32,1.175) both;\n    animation: msg-open .24s cubic-bezier(.175,.885,.32,1.175) both\n}\n\n.wui-message[data-state=exiting] {\n    -webkit-animation: msg-close .12s cubic-bezier(.4,0,1,1) both;\n    animation: msg-close .12s cubic-bezier(.4,0,1,1) both\n}\n\n.wui-message {\n    width: -webkit-fit-content;\n    width: -moz-fit-content;\n    width: fit-content;\n    z-index: 2004;\n    max-width: calc(100% - 32px);\n    margin-top: 8px;\n    box-sizing: border-box;\n    /*border-radius: var(--wui-border-radius-base);*/\n    /*border-width: var(--wui-border-width);*/\n    /*border-style: var(--wui-border-style);*/\n    border-color: var(--wui-message-border-color);\n    /*left: 50%;*/\n    /*top: 20px;*/\n    /*transform: translateX(-50%);*/\n    background-color: var(--wui-message-bg-color);\n    /*transition: opacity var(--wui-transition-duration),transform .4s,top .4s;*/\n    /*padding: var(--wui-message-padding);*/\n    display: flex;\n    align-items: center;\n}\n\n/*.wui-message--success */\n.wui-message__content {\n    color: var(--wui-message-text-color);\n    font-size: 14px;\n    line-height: 18px;\n    margin: 10px 14px 10px 14px;\n    overflow-wrap: break-word;\n}\n\n.wui-message__closeBtn {\n    /*cursor: pointer;*/\n    font-style: normal;\n    /*color: gray;*/\n    padding-right: 14px;\n    /*font-size: 13px;*/\n    user-select: none;\n\n    background: transparent;\n    border: none;\n    color: gray;\n    cursor: pointer;\n    font-size: 13px;\n    font-weight: 400;\n    line-height: 1;\n    outline: none;\n    /*padding: 4px;*/\n    text-align: center;\n    transition: opacity .3s;\n    /*width: 100%;*/\n}",
-       "_esm": "function closeMsg(msgDom) {\n  if (!msgDom) {\n    return;\n  }\n  msgDom.setAttribute('data-state', 'exiting');\n  msgDom.remove();\n}\n\nfunction createMsg(options) {\n  const {message, msg_id, type = 'info', show_close = false} = options;\n  const msgDom = document.createElement('div');\n  msgDom.className += ` wui-message--${type} wui-message`;\n  msgDom.setAttribute('data-state', 'entered');\n  msgDom.setAttribute('id', msg_id);\n  const msgContent = document.createElement('p');\n  msgContent.className += ` wui-message--${type} wui-message__content`;\n  msgContent.innerText = message;\n  msgDom.appendChild(msgContent);\n  if (show_close) {\n    const closeBtn = document.createElement('i');\n    closeBtn.className += 'wui-message__closeBtn';\n    closeBtn.innerText = 'x';\n    closeBtn.addEventListener('click', (ev) => {\n      closeMsg(msgDom);\n    })\n    msgDom.appendChild(closeBtn);\n  }\n  return msgDom;\n}\n\nexport async function render(view) {\n  let model = view.model;\n  const msgRoot = view.el;\n  msgRoot.className += ' wui-message-root'\n\n  const msgContainer = document.createElement('div');\n  msgContainer.className += ' wui-message-container';\n  msgRoot.appendChild(msgContainer)\n\n  model.on(\"change:message_options\", () => {\n    const options = model.get(\"message_options\");\n    const msg = createMsg(options);\n    msgContainer.appendChild(msg);\n    const {duration = 3000} = options;\n    if (duration > 0) {\n      setTimeout(() => {\n        closeMsg(msg)\n      }, duration);\n    }\n  })\n\n  model.on(\"change:close_msg_id\", () => {\n    const msg_id = model.get(\"close_msg_id\");\n    const msgDom = document.getElementById(msg_id);\n    closeMsg(msgDom);\n  })\n}\n",
-       "_model_module": "anywidget",
-       "_model_module_version": "~0.9.*",
-       "_model_name": "AnyModel",
-       "_view_module": "anywidget",
-       "_view_module_version": "~0.9.*",
-       "_view_name": "AnyView",
-       "close_msg_id": "",
-       "layout": "IPY_MODEL_c7da621a9d3a40dcbfd2d1d30d4abf56",
-       "message_options": {
-        "duration": 3000,
-        "message": "",
-        "show_close": false,
-        "type": "info"
-       }
-      }
-     },
-     "ab8012b23ac049beafe3fc1ffa711205": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "ac3276de026e4ba2b0114c92851c5e53": {
-      "model_module": "@jupyter-widgets/output",
-      "model_module_version": "1.0.0",
-      "model_name": "OutputModel",
-      "state": {
-       "layout": "IPY_MODEL_ab8012b23ac049beafe3fc1ffa711205"
-      }
-     },
-     "c7da621a9d3a40dcbfd2d1d30d4abf56": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     }
-    },
+    "state": {},
     "version_major": 2,
     "version_minor": 0
    }
